app/assets/stylesheets/application.css
/*
 *= require_tree .
 *= require_self
*/


/* generics */

/* force a vertical scrollbar on firefox to avoid page-shifting */
html {
	overflow: -moz-scrollbars-vertical !important;
}

body, textarea, input, button {
	font-family: "helvetica neue", arial, sans-serif;
	font-size: 10pt;
	color: #333;
}

a {
	color: #2562dc;
	cursor: pointer;
}

a:visited {
	color: #5980cc;
}

h1 {
	margin: 0px;
	margin-bottom: 0.75em;
	padding: 0px;
	font-size: 14pt;
	font-weight: bold;
}

div.clear {
	clear: both;
}

div.s {
	height: 1px;
}

a.tag {
	border: 1px solid #b8b599;
	background-color: #fffcd7;
	font-size: 7.5pt;
	margin-left: 0.25em;
	padding: 0px 0.5em 1px 0.5em;
	text-decoration: none;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
	color: #555;
	vertical-align: text-top;
}

span.fakea {
	cursor: pointer;
	text-decoration: underline;
	color: gray;
}

div.shorten_first_p p:first-child {
	margin-top: 0.5em;
}


/* default form styling */

input,
select,
button,
textarea {
	color: #555;
	line-height: 1.2em;
}
input,
button,
select,
textarea {
	padding: 3px 5px;
}
input[type="text"],
input[type="search"],
input[type="password"],
input[type="email"],
textarea {
	border: 1px solid #ccc;
}
input[type="checkbox"] {
	margin-top: 0.5em;
}
select {
	border: 1px solid #ccc;
}
input:focus,
textarea:focus {
	border-color: #aaa;
	color: #303030;
	outline: 0;
}

body.mobile input,
body.mobile button,
body.mobile select,
body.mobile textarea {
	max-width: 275px;
}

/* these must be separate */
::-webkit-input-placeholder {
	color: #aaa;
	font-style: italic;
}
:-moz-placeholder {
	color: #aaa;
	font-style: italic;
}

button,
input[type="button"],
input[type="reset"],
input[type="submit"],
div.select2-choices {
  display: inline-block;
  padding: 2px 10px 2px 10px;
  line-height: 18px;
  color: #333333;
  text-align: center;
  background-color: #fafafa;
  border: 1px solid #ccc;
  border-bottom-color: #bbb;
  cursor: pointer;
}
button:first-child,
input[type="button"]:first-child,
input[type="reset"]:first-child,
input[type="submit"]:first-child {
  *margin-left: 0;
}
button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover {
  color: #333333;
  text-decoration: none;
  background-color: #e6e6e6;
}

select {
	margin-top: 3px;
	min-width: 100px;
}
select:focus {
	border-color: rgba(160,160,160,.8);
	color: #303030;
	outline: 0;
}
select::-moz-focus-inner {
	border: 0;
	outline: 0;
}

div.field_with_errors {
	display: inline;
}

div.field_with_errors input[type="text"],
div.field_with_errors input[type="email"],
div.field_with_errors input[type="password"] {
	border: 1px solid red;
}
div.field_with_errors input:focus {
	border-color: rgba(255,0,0,.8);
}

input:disabled, button:disabled {
	background-color: #e9e9e9; 
	color: gray;
}


/* outliners */

div#wrapper {
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 1em;
	width: 1100px;
}
div#inside {
	margin-left: 0.25em;
	margin-right: 0.25em;
}


/* header */

#header {
	font-weight: bold;
	padding: 5px 42px 5px 10px;
	margin-top: 1em;
	margin-bottom: 0.75em;
}

#l_holder {
	background-color: #ee0000;
	float: left;
	width: 16px;
	height: 16px;
	padding: 1px;
	margin-left: 4px;
	margin-right: 11px;
}
#l_holder.dead {
	background-color: black;
}
#l_holder.boring {
	background-color: darkred;
}

#header h1 {
	font-size: 11pt;
	margin: 0px;
	margin-left: 22px;
	margin-right: 1em;
	padding: 0px;
	display: inline;
}
#header h1 a {
	color: #333;
	text-decoration: none;
}

#headertitle {
	padding-right: 0.75em;
}
#headertitle a {
	color: #333;
	text-decoration: none;
}

#headerlinks a {
	color: #666;
	text-decoration: none;
	padding-right: 0.75em;
}

#headerright {
	float: right;
	color: #888;
	text-align: right;
}

#headerright a {
	color: #666;
	text-decoration: none;
}

#headerright.loggedin a {
	padding-left: 0.75em;
}


/* footer */

div#footer {
	clear: both;
	color: gray;
	font-style: italic;
	margin-bottom: 2em;
	padding-top: 1em;
}
div#footer a {
	color: gray;
}


/* stories */

ol.stories,
ol.comments {
	padding: 0;
	list-style: none;
	margin: 0;
}

ol.comments {
	margin-left: 19px;
	margin-bottom: 0em;
	padding-left: 6px;
	border-left: 1px solid #ddd;
}
ol.comments1 {
	margin-left: 0;
	padding-left: 25px;
}
ol.comments.comments1 {
	border-left-color: transparent;
}

ol.comments.preview {
	margin: 1em 0 0 -15px;
	padding: 0;
}

div.voters {
	float: left;
	margin-top: -5px;
	width: 40px;
}

div.voters div.score {
	color: #aaa;
	font-size: 9pt;
	margin-top: 1px;
	margin-bottom: -2px;
	text-align: center;
}

div.voters a.upvoter,
div.voters a.downvoter {
	border-color: transparent transparent #bbb transparent;  
	border-style: solid;
	border-width: 6px;
	text-decoration: none;
	width: 0px;
	height: 0;
	margin-bottom: 0px;
	margin-left: 14px;
	padding: 0;
	display: block;
}

div.voters a.upvoter:hover,
li.upvoted div.voters a.upvoter {
	border-bottom-color: #ac130d;
}

div.voters a.upvoter {
	border-bottom-width: 11px;
}

div.voters a.downvoter {
	border-color: #bbb transparent transparent transparent;
	border-width: 5px;
	margin-top: 4px;
	margin-left: 15px;
	margin-bottom: -5px;
	border-top-width: 9px;
}
div.voters a.downvoter:hover,
li.downvoted div.voters a.downvoter {
	border-top-color: gray;
}

ol.stories li,
ol.comments li {
	clear: both;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}
ol.stories li:first-child {
	padding-top: 0.5em;
}
li div.details {
	padding-top: 0.1em;
}

ol.comments li.negative {
	opacity: 0.7;
	color: gray !important;
}
ol.comments li.negative_3 {
	opacity: 0.4;
}
ol.comments li.negative_5 {
	opacity: 0.3;
}
ol.comments li.negative_7 {
	opacity: 0.2;
}

ol.comments li.highlighted {
	background-color: #ffffbf;
}

li .link {
	font-weight: bold;
	vertical-align: middle;
}

li .link a {
	font-size: 11pt;
	text-decoration: none;
}

ol.stories a.tag {
	vertical-align: middle;
}
/* ... */

